# investment-committee-lite

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
committee_lite/: __init__.py  cli.py  config.py
committee_lite/agents/: __init__.py  fundamentals.py  sentiment.py  technical.py  valuation.py
committee_lite/llm/: __init__.py  anthropic_adapter.py  client.py  mock_adapter.py  openai_adapter.py
committee_lite/orchestrator/: __init__.py  committee.py  portfolio_manager.py
committee_lite/schemas/: __init__.py  agent_output.py  decision.py
committee_lite/tools/: __init__.py  dcf_calculator.py  financial_data.py  technical_indicators.py
examples/: README.md  analysis_NVDA_20260205_212556_catalyst.txt  analysis_NVDA_20260205_212556_technical.txt  analysis_NVDA_20260205_212556_value.txt  autogen_AAPL_analysis_with_debate.json  autogen_NVDA_analysis_with_debate.json  crewai_v1_ServiceNow_analysis.md  crewai_v2_NVDA_final_synthesis.txt  crewai_v2_NVDA_quality_agent.txt  crewai_v2_NVDA_sentiment_agent.txt  summary of debate on NVidia.md
tests/: __init__.py  test_agents.py  test_end_to_end.py  test_orchestrator.py  test_schemas.py
